--- a/style.css
+++ b/style.css
@@ -233,6 +233,24 @@ section {
   border-radius: 2rem;
 }
 
+.btn-2 {
+  font-weight: 200;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 4rem;
+  border-radius: 2rem;
+}
+
+.btn-3 {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2rem;
+  display: block;  /* Make the button a block element */
+  margin: 0 auto
+}
+
 .btn-color-1,
 .btn-color-2 {
   border: rgb(53, 53, 53) 0.1rem solid;
@@ -426,6 +444,8 @@ body {
   background-color: #f0f0f0;  /* Default light background */
   color: #333;               /* Default light text */
   transition: all 0.5s ease; /* Smooth transition effect */
+
+  
 }
 
 .dark-mode {
