--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ section {
   padding: 1rem;
   width: 8rem;
   border-radius: 2rem;
-  display: block;  /* Make the button a block element */
+  display: block; 
   margin: 0 auto
 }
 
@@ -453,9 +453,3 @@ body {
   color: #f0f0f0;            /* Dark text */
 }
 
-/* Make sure these target the button when the menu is open */
-.dark-mode .menu-links .btn-3 { 
-  background-color: #333; /* Dark background */
-  color: #f0f0f0;        /* Light text */
-  border-color: #555;    /* Dark border */ 
-}
